# Codepad

./: .env.example  .gitignore  CHALLENGES_ARCH_REVIEW.md  CHALLENGES_PAGE_REDESIGN_PLAN.md  CHALLENGE_TRACKS_FEATURE_PLAN.md  DEPLOY.md  GUIDE.md  HOMEPAGE_SCROLL_ANIMATIONS_PLAN.md  INTERVIEW_CHALLENGES_HOME_SECTION_PLAN.md  README.md  UX_REVIEW_FEEDBACK_PLAN.md  docker-compose.dev.yml  docker-compose.piston.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
.claude/: launch.json  settings.local.json
.github/: CODEOWNERS
agent/: .gitignore  Cargo.toml  README.md
agent/proctor-agent/: Cargo.toml
agent/proctor-agent/src/: config.rs  lib.rs  main.rs  report.rs  runtime.rs  transport.rs  uninstall.rs
agent/proctor-app/: Cargo.toml  tauri.conf.json
agent/proctor-app/capabilities/: default.json
agent/proctor-app/icons/: icon.icns
agent/proctor-app/src/: main.rs
agent/proctor-app/ui/: index.html
agent/proctor-detect/: Cargo.toml
agent/proctor-detect/examples/: scan.rs
agent/proctor-detect/src/: lib.rs  signatures.rs  types.rs
agent/proctor-detect/src/platform/: fallback.rs  mod.rs  windows.rs
docs/: creator-marketplace-stripe-testing.md  cron-notifications.md  deploy-email.md
graphify-out/: .graphify_cached.json  .graphify_detect.json  .graphify_incremental.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  logo-demo.html  logo-live.html  logo-preview.html  manifest.json
prisma/: augment-ai.ts  augment-angular.ts  augment-dsa.ts  augment-js-examples.ts  augment-machine-coding.ts  augment-nextjs.ts  augment-node.ts  augment-python.ts  augment-sql.ts  (+33 more)
(+977 files in other folders)
