[package]
name = "proctor-agent"
version = "0.1.0"
edition = "2021"
description = "Interview proctor agent runtime: consent-gated scan loop + signed event reporting + self-uninstall."
license = "UNLICENSED"
publish = false

[[bin]]
name = "proctor-agent"
path = "src/main.rs"

[dependencies]
proctor-detect = { path = "../proctor-detect" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
