[package]
name = "proctor-app"
version = "0.1.0"
edition = "2021"
description = "Consent-gated desktop shell for the interview proctor agent (Tauri)."
license = "UNLICENSED"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proctor-detect = { path = "../proctor-detect" }
proctor-agent = { path = "../proctor-agent" }

[features]
# Tauri's CSP/custom-protocol switch for production bundles.
custom-protocol = ["tauri/custom-protocol"]
