[package]
name = "proctor-detect"
version = "0.1.0"
edition = "2021"
description = "Local detection of overlay / capture-excluded AI-assist tools for consent-based interview proctoring."
license = "UNLICENSED"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
] }

[[example]]
name = "scan"
path = "examples/scan.rs"
